--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Inform/Transform
 email: hello@informtransform.info
 url: https://inform-transform.github.io
-description: More coming soon
+description: "Inform/Transform is a zine about the different ways that information can be controlled, manipulated and transformed."
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
