--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Inform/Transform
 email: hello@informtransform.info
-url: https://inform-transform.github.io
+url: https://zararah.github.io/informtransform.info
 description: "Inform/Transform is a zine about the different ways that information can be controlled, manipulated and transformed, highlighted through historical examples and drawings."
 
 # Color settings (hex-codes without the leading hash-tag)
